crates/core/tests/snapshots/setting_env_test__setting_env__named_struct__supports_optional_types.snap
---
source: crates/core/tests/setting_env_test.rs
expression: pretty(container.impl_partial_env_values())
---
fn env_values_with_prefix(
    prefix: Option<&str>,
) -> std::result::Result<Option<Self>, schematic::ConfigError> {
    use schematic::internal::*;
    let mut env = EnvManager::new(prefix);
    let mut partial = Self::default();
    partial.a = env.get("A")?;
    partial.b = env.get_and_parse("B", parse_func)?;
    Ok(if env.is_empty() { None } else { Some(partial) })
}
