crates/core/tests/snapshots/setting_env_test__setting_env__named_struct__supports_unparsable_types_with_parse_env.snap
---
source: crates/core/tests/setting_env_test.rs
expression: pretty(container.impl_partial_env_values())
---
fn env_values_with_prefix(
    prefix: Option<&str>,
) -> std::result::Result<Option<Self>, schematic::ConfigError> {
    use schematic::internal::*;
    let mut env = EnvManager::new(prefix);
    let mut partial = Self::default();
    partial.a = env.get_and_parse("LIST", schematic::env::split_comma)?;
    partial.b = env.get_and_parse("OPT_LIST", schematic::env::split_comma)?;
    partial.c = env.get_and_parse("BOXED", parse_func)?;
    Ok(if env.is_empty() { None } else { Some(partial) })
}
